<resources>
    <string name="app_name">可依</string>
    <string name="image_description" >Nothing</string>
    <string name="default_music_name">Music Name</string>
    <string name="default_music_duration">00:00</string>
    <string name="default_author">Author Unknown</string>
    <string name="unknown_music_name">Unknown Title</string>
    <string name="unknown_music_artist">Unknown Artist</string>
    <string name="unknown_duration">Unknown Duration</string>
    <string name="test_button">Test Button</string>
</resources>
