<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/music_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/default_music"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/music_img"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tv_music_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_music_name"/>

        <TextView
            android:id="@+id/tv_music_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_music_title"
            android:text="@string/unknown_music_artist"/>

        <TextView
            android:id="@+id/tv_music_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/unknown_duration"/>

    </RelativeLayout>

</RelativeLayout>


