<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_play">

    <!--top-->
    <RelativeLayout
        android:id="@+id/detail_rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/detail_img_down"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/action_selector"
            android:scaleType="centerInside"
            android:contentDescription="@string/image_description"
            android:src="@drawable/detail_dropdown2" />
        <TextView
            android:id="@+id/detail_tv_music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/detail_img_down"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:text="@string/default_music_name"/>
        <TextView
            android:id="@+id/detail_tv_music_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_img_down"
            android:layout_below="@+id/detail_tv_music_name"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/default_author"/>
    </RelativeLayout>

    <!--Lyrics-->
    <ImageView
        android:id="@+id/detail_img_lrc_position"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/detail_rl_top"
        android:contentDescription="@string/image_description"/>

    <!--bottom-->
    <RelativeLayout
        android:id="@+id/detail_rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingBottom="15dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/detail_ll_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/detail_tv_time_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/default_music_duration"/>
            <SeekBar
                android:id="@+id/detail_bottom_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:progressDrawable="@drawable/seek_bar_progress_style"
                android:thumb="@mipmap/ic_seek_bar_thumb"/>
            <TextView
                android:id="@+id/detail_tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/default_music_duration"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <ImageView
                android:id="@+id/dg_bottom_prev"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/play_prev_selector"
                android:contentDescription="@string/image_description"/>
            <ImageView
                android:id="@+id/dg_bottom_play"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/play_stop_selector"
                android:contentDescription="@string/image_description"/>
            <ImageView
                android:id="@+id/dg_bottom_next"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/play_next_selector"
                android:contentDescription="@string/image_description"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
